<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bg_image_premium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closePremium"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:icon="@drawable/admob_close_button_black_circle_white_cross"
        app:iconSize="32dp"
        app:iconTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/privacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/get_premium"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_extra_bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:drawableStart="@drawable/ic_star_filled"
            android:drawableEnd="@drawable/ic_tick_premium"
            android:drawablePadding="12dp"
            android:text="@string/premium_benefit_1"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_semibold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:drawableStart="@drawable/ic_star_filled"
            android:drawableEnd="@drawable/ic_tick_premium"
            android:drawablePadding="12dp"
            android:text="@string/premium_benefit_2"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_semibold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:drawableStart="@drawable/ic_star_filled"
            android:drawableEnd="@drawable/ic_tick_premium"
            android:drawablePadding="12dp"
            android:text="@string/premium_benefit_3"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_semibold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:drawableStart="@drawable/ic_star_filled"
            android:drawableEnd="@drawable/ic_tick_premium"
            android:drawablePadding="12dp"
            android:text="@string/premium_benefit_4"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_semibold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/item_in_app_purchase" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:text="@string/_continue"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/premium_description"
            android:textAlignment="center"
            app:fontFamily="@font/poppins_medium" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacyPolicy"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/privacy_policy_underline"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/termAndServices"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/term_amp_services_link"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/privacyPolicy"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>